--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "@emotion/react": "^11.1.3",
+    "@chakra-ui/react": "^1.1.0",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-emotion": "^5.1.0",
@@ -28,11 +30,15 @@
     "gatsby-plugin-mdx": "^1.7.0",
     "gatsby-plugin-offline": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-woocommerce": "^0.2.0",
     "gatsby-source-wordpress-experimental": "^6.0.0",
     "gatsby-transformer-sharp": "^2.9.0",
+    "lodash": "^4.17.20",
+    "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
