--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-graphql": "^2.11.0",
     "gatsby-source-woocommerce": "^0.2.0",
     "gatsby-source-wordpress-experimental": "^6.0.0",
     "gatsby-transformer-sharp": "^2.9.0",
