--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-google-analytics": "^2.8.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-mdx": "^1.7.0",
     "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
@@ -41,7 +43,11 @@
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
+    "react-dev-utils": "^11.0.2",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1"
   }
 }
